Меняет кнопки открытия/закрытия сайдбара на тоглинг

--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
 </head>
 <body>
   <main class="main">
-    <button class="open-btn" type="button">
+    <button class="sidebar-button open-button" type="button">
       <span class="visually-hidden">Открыть меню</span>
     </button>
     <section class="sidebar-menu">
-      <button class="close-btn" type="button">
-        <span class="visually-hidden">Закрыть меню</span>
-      </button>
       <ul class="sidebar-menu__list tools">
         <li class="sidebar-menu__item shape-width">
           <label class="shape-width__label" for="width">
